package quantity.glasswindow.UI;

public class JobPostController extends TransitionController{

}
